be/src/util/symbols-util-test.cc
@@ -17,8 +17,6 @@
 #include <iostream>
 #include <gtest/gtest.h>
 
-#include "codegen/llvm-codegen.h"
-#include "util/cpu-info.h"
 #include "util/symbols-util.h"
 
 #include "common/names.h"
@@ -325,7 +323,5 @@ TEST(SymbolsUtil, ManglingPrepareOrClose) {
 
 int main(int argc, char **argv) {
   ::testing::InitGoogleTest(&argc, argv);
-  impala::CpuInfo::Init();
-  impala::LlvmCodeGen::InitializeLlvm();
   return RUN_ALL_TESTS();
 }
